@@ -16,16 +16,16 @@
 
 package com.adaptris.core.services.jdbc.types;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.OutputStream;
 import java.io.StringWriter;
 import java.sql.Types;
 
 import org.apache.commons.io.output.WriterOutputStream;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import com.adaptris.jdbc.JdbcResultRow;
 
@@ -34,7 +34,7 @@ public class ByteArrayColumnTranslatorTest {
 
   private ByteArrayColumnTranslator translator;
 
-  @Before
+  @BeforeEach
   public void setUp() throws Exception {
     translator = new ByteArrayColumnTranslator();
   }
@@ -72,7 +72,7 @@ public class ByteArrayColumnTranslatorTest {
   @Test
   public void testByteIncorrectObject() throws Exception {
     JdbcResultRow row = new JdbcResultRow();
-    row.setFieldValue("testField", new Integer(10), Types.ARRAY);
+    row.setFieldValue("testField", Integer.valueOf(10), Types.ARRAY);
 
     try {
       translator.translate(row, "testField");
